[fixed] video jump

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -15,6 +15,8 @@
 
 video {
   box-shadow: 10px 5px 5px #8080807d;
+  height: 100%;
+  width: 100%;
 }
 
 i.fa-quote-left {
